@@ -17,4 +17,13 @@ for HTML, but
 
 for Atom and RSS.
 
-    
+> This garbling is provably pointless. Proof: For $1000 I will take off my
+> white hat, put on my black hat, and implement support for it in any
+> spammer's email address extraction tool. Money will be donated to a
+> spam-fighting organisation of my choice.
+> 
+> So, in leu of money, it seems best to find a way to disable it in
+> markdown.
+> 
+> Anyway, I've fixed this, at the expense of additional total worldwide
+> power usage, etc. --[[Joey]]
