@@ -27,6 +27,8 @@ ikiwiki (3.20110609) UNRELEASED; urgency=low
     fixes sorting comments by date. (smcv)
   * Run scan hooks for internal pages (preprocess hooks already run in scan
     mode) (smcv)
+  * inline: Handle obfuscated urls, such as the mailto urls generated by
+    markdown when forcing urls absolute.
 
  -- Joey Hess <joeyh@debian.org>  Thu, 09 Jun 2011 10:06:44 -0400
 
